// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectAmount should render children correctly 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "flex-start",
          "flexShrink": 1,
          "gap": 8,
        },
        {
          "gap": 16,
        },
      ]
    }
  >
    <ParsedPeachText
      parse={
        [
          {
            "pattern": /selling/u,
            "style": {
              "color": "#F56522",
            },
          },
        ]
      }
      style={
        [
          {
            "fontFamily": "Baloo2-Bold",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 26,
          },
          {
            "fontFamily": "Baloo2-Bold",
            "fontSize": 24,
            "letterSpacing": 0.24,
            "lineHeight": 32,
          },
        ]
      }
    >
      You're selling:
    </ParsedPeachText>
    <CustomAmount
      amount={60000}
      onChange={[Function]}
      style={
        {
          "alignItems": "flex-start",
          "flexShrink": 1,
        }
      }
    />
    <PeachText>
      I'm a child
    </PeachText>
  </View>
  <SliderTrack
    onLayout={[Function]}
    style={
      {
        "height": "100%",
      }
    }
  >
    <TrackMarkers />
    <ForwardRef(AnimatedComponentWrapper)
      onMoveShouldSetResponder={[Function]}
      onMoveShouldSetResponderCapture={[Function]}
      onResponderEnd={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderReject={[Function]}
      onResponderRelease={[Function]}
      onResponderStart={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onStartShouldSetResponderCapture={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "marginLeft": -24,
            "marginRight": -24,
            "paddingLeft": 24,
            "paddingRight": 24,
            "position": "absolute",
            "top": 0,
          },
          {
            "transform": [
              {
                "translateY": 230,
              },
            ],
          },
        ]
      }
    >
      <SliderKnob />
    </ForwardRef(AnimatedComponentWrapper)>
  </SliderTrack>
</View>
`;

exports[`SelectAmount should render correctly 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "flex-start",
          "flexShrink": 1,
          "gap": 8,
        },
        {
          "gap": 16,
        },
      ]
    }
  >
    <ParsedPeachText
      parse={
        [
          {
            "pattern": /selling/u,
            "style": {
              "color": "#F56522",
            },
          },
        ]
      }
      style={
        [
          {
            "fontFamily": "Baloo2-Bold",
            "fontSize": 16,
            "letterSpacing": 0.16,
            "lineHeight": 26,
          },
          {
            "fontFamily": "Baloo2-Bold",
            "fontSize": 24,
            "letterSpacing": 0.24,
            "lineHeight": 32,
          },
        ]
      }
    >
      You're selling:
    </ParsedPeachText>
    <CustomAmount
      amount={60000}
      onChange={[Function]}
      style={
        {
          "alignItems": "flex-start",
          "flexShrink": 1,
        }
      }
    />
  </View>
  <SliderTrack
    onLayout={[Function]}
    style={
      {
        "height": "100%",
      }
    }
  >
    <TrackMarkers />
    <ForwardRef(AnimatedComponentWrapper)
      onMoveShouldSetResponder={[Function]}
      onMoveShouldSetResponderCapture={[Function]}
      onResponderEnd={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderReject={[Function]}
      onResponderRelease={[Function]}
      onResponderStart={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      onStartShouldSetResponderCapture={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
            "marginLeft": -24,
            "marginRight": -24,
            "paddingLeft": 24,
            "paddingRight": 24,
            "position": "absolute",
            "top": 0,
          },
          {
            "transform": [
              {
                "translateY": 230,
              },
            ],
          },
        ]
      }
    >
      <SliderKnob />
    </ForwardRef(AnimatedComponentWrapper)>
  </SliderTrack>
</View>
`;
